--- a/css/index.css
+++ b/css/index.css
@@ -23,6 +23,8 @@
 	box-sizing: border-box;
 }
 body {
+	
+	background-image: url(https://sun9-14.userapi.com/impg/2tzYJrkTVLN2Pnmd_GlKuEL9mn-WOsKGdXTH4A/yfo97fCdjHI.jpg?size=1280x1280&quality=95&sign=d09b93fe6d8e1e2090b6bbb7068e37f1&type=album);
 	margin: 0;
 	padding: 0;
 	font-family: sans-serif;
