--- a/css/index.css
+++ b/css/index.css
@@ -23,12 +23,13 @@
 	box-sizing: border-box;
 }
 body {
-	
+	background-image: url(https://sun9-14.userapi.com/impg/2tzYJrkTVLN2Pnmd_GlKuEL9mn-WOsKGdXTH4A/yfo97fCdjHI.jpg?size=1280x1280&quality=95&sign=d09b93fe6d8e1e2090b6bbb7068e37f1&type=album);
 	margin: 0;
 	padding: 0;
+	width: 100%;
 	font-family: sans-serif;
 	line-height: 1.7;
-	
+	z-index: 1; 
 	background: var(--color-light);
 }
 
