--- a/css/index.css
+++ b/css/index.css
@@ -23,7 +23,7 @@
 	box-sizing: border-box;
 }
 body {
-	background: linear-gradient(to top, #a03bff, #4c0191);
+	background: linear-gradient(to top, #a03bff, #330261);
 	margin: 0;
 	padding: 0;
 	width: 100%;
