--- a/components/Products/Products.css
+++ b/components/Products/Products.css
@@ -5,6 +5,14 @@
 	width: 80%;
 	max-width: 900px;
 	margin: var(--spacing-large) auto;
+        -webkit-box-shadow: 8px 10px 8px 0px rgba(233, 63, 244, 0.39);
+        -moz-box-shadow: 8px 10px 8px 0px rgba(233, 63, 244, 0.39);
+        box-shadow: 8px 10px 8px 0px rgba(233, 63, 244, 0.39);
+
+
+
+
+
 }
 .products-element {
 	display: flex;
