--- a/components/Products/Products.css
+++ b/components/Products/Products.css
@@ -36,7 +36,20 @@
 	height: 200px;
 	margin-top: var(--spacing-medium);
 	object-fit: contain;
+        transition: box-shadow 0.5s, transform 0.5s;
 }
+
+.products-element__img:hover {
+	width: 110%;
+	height: 220px;
+	margin-top: var(--spacing-medium);
+	object-fit: contain;
+        transition: box-shadow 0.5s, transform 0.5s;
+}
+
+
+
+
 .products-element__price {
 	margin-top: var(--spacing-medium);
 	color: var(--color-unaccent);
