--- a/components/Products/Products.css
+++ b/components/Products/Products.css
@@ -32,21 +32,14 @@
 	font-weight: bold;
 }
 .products-element__img {
-	width: 200px;
+	width: 100%;
 	height: 200px;
 	margin-top: var(--spacing-medium);
 	object-fit: contain;
-        transition: box-shadow 0.5s, transform 0.5s;
+       
 }
 
-.products-element__img:hover {
-	width: 220px;
-	height: 220px;
-	
-	margin-top: var(--spacing-medium);
-	object-fit: contain;
-        transition: box-shadow 0.5s, transform 0.5s;
-}
+
 
 
 
