--- a/components/Products/Products.css
+++ b/components/Products/Products.css
@@ -4,7 +4,7 @@
 	grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
 	width: 100%;
 	max-width: 1400px;
-	margin: var(--spacing-large) auto;
+	margin: 1% auto;
         
 
 
