--- a/components/Products/Products.css
+++ b/components/Products/Products.css
@@ -1,7 +1,7 @@
 .products-container {
 	display: grid;
         grid-gap: 30px;
-	grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+	grid-template-columns: repeat(auto-fit, minmax(200px, 1fr 1fr 1fr));
 	width: 100%;
 	max-width: 1400px;
 	
