--- a/components/Products/Products.css
+++ b/components/Products/Products.css
@@ -5,7 +5,10 @@
 	width: 100%;
 	max-width: 1400px;
 	
-        
+        margin: 10px 15px 30px 5px;  /* верх:   отступ 10px */
+                                   /* право:  отступ 3px */
+                                  /* низ:    отступ 30px */
+                                   /* лево:   отступ 5px *
 
 
 
