--- a/components/Shopping/Shopping.css
+++ b/components/Shopping/Shopping.css
@@ -28,5 +28,7 @@
 	background-repeat: no-repeat;
 	background-position: center center;
 	background-size: contain;
-	cursor: pointer;
+}
+.header-icon {
+    cursor: pointer;
 }
