--- a/css/index.css
+++ b/css/index.css
@@ -43,3 +43,9 @@ body {
 ::-webkit-scrollbar-track {
 	background-color: var(--color-white);
 }
+
+
+
+.btn btn-outline-warning{
+      display: none; 
+    }
