--- a/components/Products/Products.css
+++ b/components/Products/Products.css
@@ -34,7 +34,7 @@
 .products-element__img {
 	width: 100%;
 	height: 200px;
-	margin-top: var(--spacing-medium);
+	margin-top: var(--spacing-small);
 	object-fit: contain;
        
 }
@@ -45,7 +45,7 @@
 
 
 .products-element__price {
-	margin-top: var(--spacing-medium);
+	margin-top: var(--spacing-small);
 	color: var(--color-unaccent);
 }
 .products-element__btn {
