--- a/components/Products/Products.css
+++ b/components/Products/Products.css
@@ -49,8 +49,8 @@
 	color: var(--color-unaccent);
 }
 .products-element__btn {
-	margin-top:5px;
-	padding: var(--spacing-small) var(--spacing-medium);
+	margin-top: 5px;
+	padding:  5px  10px;
 	border: 1px solid var(--color-unaccent);
 	border-radius: var(--border-radius);
 	cursor: pointer;
