--- a/components/Products/Products.css
+++ b/components/Products/Products.css
@@ -19,13 +19,16 @@
 	padding: 25px 20px;
 	border-radius: var(--border-radius);
 	background-color: var(--color-white);
-	box-shadow: var(--box-shadow);
-        -webkit-box-shadow: 8px 10px 8px 0px rgba(233, 63, 244, 0.39);
-        -moz-box-shadow: 8px 10px 8px 0px rgba(233, 63, 244, 0.39);
-        box-shadow: 8px 10px 8px 0px rgba(233, 63, 244, 0.39);
+	box-shadow: 0 4px 8px 0 rgb(82, 6, 196);
 
 
 }
+
+.products-element:hover {
+    box-shadow: 0 8px 16px 0 rgb(143, 79, 240);
+}
+
+
 .products-element__name {
 	margin-bottom: auto;
 	text-transform: uppercase;
