--- a/components/Header/Header.css
+++ b/components/Header/Header.css
@@ -15,3 +15,24 @@
     cursor: pointer;
 }
 
+
+
+
+
+
+.btn {
+  border: none;
+  outline: none;
+  padding: 12px 16px;
+  background-color: #f1f1f1;
+  cursor: pointer;
+}
+
+.btn:hover {
+  background-color: #ddd;
+}
+
+.btn.active {
+  background-color: #666;
+  color: white;
+}
