--- a/components/Spinner/Spinner.css
+++ b/components/Spinner/Spinner.css
@@ -1,5 +1,5 @@
 .spinner-container {
-	background-color: #c7b39b; 
+	background-image: url(https://i.ibb.co/SJYpmFV/yfo97f-Cdj-HI.jpg);
     position: fixed;
     top: 0;
     left: 0;
