--- a/components/Spinner/Spinner.css
+++ b/components/Spinner/Spinner.css
@@ -1,11 +1,13 @@
 .spinner-container {
-	background-image: url(https://i.ibb.co/SJYpmFV/yfo97f-Cdj-HI.jpg);
+background: -webkit-linear-gradient(45deg, rgb(231, 44, 225) 36%, rgb(88, 82, 182));
+background: -moz-linear-gradient(45deg, rgb(231, 44, 225) 36%, rgb(88, 82, 182));
+background: linear-gradient(45deg, rgb(231, 44, 225) 36%, rgb(88, 82, 182));
     position: fixed;
     top: 0;
     left: 0;
 	display: flex;
 	width: 100%;
-	
+	height: 100%;
 	justify-content: center;
 	align-items: center;
 }
