--- a/components/Spinner/Spinner.css
+++ b/components/Spinner/Spinner.css
@@ -25,9 +25,9 @@ background: linear-gradient(45deg, rgb(231, 44, 225) 36%, rgb(88, 82, 182));
 .loader {
   border: 16px solid #f3f3f3;
   border-radius: 50%;
-  border-top: 16px solid blue;
-  border-right: 16px solid green;
-  border-bottom: 16px solid red;
+  border-top: 16px solid #4d08a6;
+  border-right: 16px solid #963cf0;
+  border-bottom: 16px solid #fa55f4;
   width: 120px;
   height: 120px;
   -webkit-animation: spin 2s linear infinite;
