--- a/components/Spinner/Spinner.css
+++ b/components/Spinner/Spinner.css
@@ -1,4 +1,5 @@
 .spinner-container {
+	z-index: 99999997;
 background: -webkit-linear-gradient(45deg, rgb(231, 44, 225) 36%, rgb(88, 82, 182));
 background: -moz-linear-gradient(45deg, rgb(231, 44, 225) 36%, rgb(88, 82, 182));
 background: linear-gradient(45deg, rgb(231, 44, 225) 36%, rgb(88, 82, 182));
