--- a/components/Header/Header.css
+++ b/components/Header/Header.css
@@ -7,7 +7,7 @@
 
 
 
-@media (min-width: 1240px)  {
+@media (min-width: 420px) and (max-width: 1420px) {
 
 .header-counter {
     margin-left: 85%;
@@ -22,7 +22,7 @@
 
 
 
-@media (max-width: 360px) {
+@media (min-width: 240px) and (max-width: 360px) {
 
 .header-counter {
     margin-left: 5%;
