--- a/components/Shopping/Shopping.css
+++ b/components/Shopping/Shopping.css
@@ -31,6 +31,32 @@
 	background-position: center center;
 	background-size: contain;
 }
+
+
+
+
+
+
+@media (min-width: 420px) and (max-width: 1420px) {
+
 .header-icon {
+    margin-left: 85%;	
     cursor: pointer;
 }
+
+
+}
+
+
+@media (min-width: 240px) and (max-width: 360px) {
+
+.header-icon {
+    margin-left: 5%;	
+    cursor: pointer;
+}
+
+
+}
+
+
+
